tests/types/errors/emit_unknown_stream.mochi
emit Foo { value: 1 }
