tests/types/errors/emit_unknown_stream.err
1. error[T031]: unknown stream: Foo
  --> tests/types/errors/emit_unknown_stream.mochi:1:1

  1 | emit Foo { value: 1 }
    | ^

help:
  Declare the stream before using it.
